# AGENTFLOW

./: .gitignore  README.md
agentflow/backend/: .env.example  alembic.ini
agentflow/backend/alembic/: env.py
agentflow/backend/alembic/versions/: 5aefe74f357d_create_users_and_projects.py  c100de835a47_add_workflows_table.py
agentflow/backend/app/: main.py
agentflow/backend/app/api/: router.py
agentflow/backend/app/contracts/execution/: status.py
agentflow/backend/app/core/: database.py  lifecycle.py  redis.py
agentflow/backend/app/core/settings/: settings.py
agentflow/backend/app/persistence/models/: execution.py  mixins.py  project.py  user.py  workflow.py
backend/: pyproject.toml
backend/alembic/versions/: e527e6613f6b_add_executions_table.py
backend/app/persistence/models/: project.py
