[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentflow-backend"
version = "0.1.0"
description = "AgentFlow AI Automation Platform Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.41",
    "psycopg[binary]>=3.2.9",
    "alembic>=1.16.4",
    "redis>=6.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "structlog>=25.4.0"
]

[tool.setuptools]
include-package-data = true